tests/sksl/errors/Ossfuzz27663.sksl
void main() { sk_FragColor = float4(1) / - -half4(0); }
